--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,10 +1,8 @@
-# Use this file to define individuals or teams that are responsible for code in a repository.
-# Read more: <https://help.github.com/articles/about-codeowners/>
-#
-# Order is important: the last matching pattern has the highest precedence
 
-# These owners will be the default owners for everything
-* @clouddrove/approvers @clouddrove/contributors
+# Cloud Posse must review any changes to GitHub actions
+.github/*     @clouddrove/approvers
 
-# Admins must review all changes to CODEOWNERS or the mergify configuration
-.github/CODEOWNERS  @anmolnagpal
+*     @clouddrove/clouddrovians @clouddrove/approvers
+
+.github/mergify.yml @clouddrove/admins
+.github/CODEOWNERS  @clouddrove/admins
