fix: update strucuter and version

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,6 +1,1 @@
-.github/*     @clouddrove/approvers
-
-*     @clouddrove/clouddrovians @clouddrove/approvers
-
-.github/mergify.yml @clouddrove/admins
-.github/CODEOWNERS  @clouddrove/admins
+*   @clouddrove/approvers
