--- a/.github/workflows/tfsec.yml
+++ b/.github/workflows/tfsec.yml
@@ -7,3 +7,5 @@ jobs:
   tfsec:
     uses: clouddrove/github-shared-workflows/.github/workflows/tfsec.yml@master
     secrets: inherit
+    with:
+      working_directory: '.'
