--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,9 +12,9 @@ updates:
       interval: "daily"
     open-pull-requests-limit: 3
     assignees:
-    - "clouddrove-ci"
+      - "clouddrove-ci"
     reviewers:
-    - "approvers"
+      - "approvers"
 
   - package-ecosystem: "terraform" # See documentation for possible values
     directory: "/" # Location of package manifests
@@ -30,20 +30,7 @@ updates:
     open-pull-requests-limit: 3
 
   - package-ecosystem: "terraform" # See documentation for possible values
-    directory: "/_example/basic" # Location of package manifests
-    schedule:
-      interval: "weekly"
-    # Add assignees
-    assignees:
-      - "clouddrove-ci"
-    # Add reviewer
-    reviewers:
-      - "approvers"
-    # Allow up to 3 open pull requests for pip dependencies
-    open-pull-requests-limit: 3
-
-  - package-ecosystem: "terraform" # See documentation for possible values
-    directory: "/_example/complete" # Location of package manifests
+    directory: "/examples/" # Location of package manifests
     schedule:
       interval: "weekly"
     # Add assignees
