feat: updated readme

--- a/README.yaml
+++ b/README.yaml
@@ -41,4 +41,5 @@ include:
 usage: |-
   Here are some examples of how you can use this module in your inventory structure:
   ```hcl
+    locals {}
     ```
