--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -7,7 +7,7 @@ on:
       - 'README.md'
   workflow_dispatch:
 jobs:
-  assignee:
+  readme:
     uses: clouddrove/github-shared-workflows/.github/workflows/readme.yml@master
     secrets:
       TOKEN : ${{ secrets.GITHUB }}
