feat: done changes in tfcheck file

--- a/.github/workflows/tf-checks.yml
+++ b/.github/workflows/tf-checks.yml
@@ -8,6 +8,7 @@ jobs:
   basic:
     uses: clouddrove/github-shared-workflows/.github/workflows/tf-checks.yml@1.2.6
     with:
+      provider: gcp
       working_directory: './examples/basic/'
  
   complete:
