feat: resolvedissue of tfcheck file

--- a/.github/workflows/tf-checks.yml
+++ b/.github/workflows/tf-checks.yml
@@ -14,4 +14,5 @@ jobs:
   complete:
     uses: clouddrove/github-shared-workflows/.github/workflows/tf-checks.yml@1.2.6
     with:
+      provider: gcp
       working_directory: './examples/complete/'
