--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -20,7 +20,7 @@ jobs:
       - name: 'create readme'
         uses: 'clouddrove/github-actions@9.0.3'
         with:
-          actions_subcommand: 'readme'
+          tf_actions_subcommand: 'readme'
           github_token: '${{ secrets.GITHUB }}'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -38,7 +38,7 @@ jobs:
         uses: 'clouddrove/github-actions@9.0.3'
         continue-on-error: true
         with:
-          actions_subcommand: 'push'
+          tf_actions_subcommand: 'push'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
